--- a/views/share.handlebars
+++ b/views/share.handlebars
@@ -28,7 +28,9 @@
 <body onload="setPageType('Share', '{{name}}');">
 
   <nav class="navbar navbar-expand-md navbar-dark bg-dark" id="dummyBar">
-    <a class="navbar-brand" href="/">EZ Cooking</a>
+    <a class="navbar-brand" href="/home">
+      <img class="navbar-logo"src="/images/logo-transparent.svg">
+    </a>
   </nav>
   <div id="topNavBar"></div>
 
@@ -69,7 +71,7 @@
 
       <div class="col-6 text-right">
         <p class="px-2 px-md-0">
-          <a class="button" href="/">Back To Home</a>
+          <a class="button" href="/home">Back To Home</a>
         </p>
       </div>
 
