--- a/public/css/category.css
+++ b/public/css/category.css
@@ -1,4 +1,3 @@
-
 .food-card-img {
     width: 100%;
     max-width: 100%;
@@ -23,9 +22,22 @@
     text-decoration: none !important;
     color: black;
 }
+
 .col-info {
     padding-left: 0px;
 }
+
 .center {
     text-align: center;
+}
+
+.col-8 {
+    padding-right: 10px !important; 
+}
+
+.fadeToBlack {
+    height: 20vh;
+}
+.topRow {
+    padding-bottom: 10px;
 }
