--- a/public/css/food.css
+++ b/public/css/food.css
@@ -1,9 +1,13 @@
 
 #favorites-star {
-    height : 1.75rem;
-    padding-top: 2px;
-    display: flex;
-    float: right;
+    position: absolute;
+    max-height: 3.25rem;
+    max-width: 3.25rem;
+    bottom: 0;
+    padding: 5px;
+    z-index: 3;
+    right: 1%;
+    bottom: 1.5%;
 }
 
 #favorites-message {
@@ -55,5 +59,7 @@ h5 {
 }
 
 #button-row {
+    padding-top: 20px;
     padding-bottom: 10px;
 }
+
