--- a/public/css/login.css
+++ b/public/css/login.css
@@ -1,14 +1,16 @@
 .login-button {
-    padding: 20px;
-    padding-bottom: 15px;
+    padding: 10px;
+    padding-bottom: 10px;
+    width: 70vw;
     max-width: 400px;
 }
 
 .login-button-guest {
     margin : 0 auto;
     width: 100%;
+    width: 70vw;
     max-width: 400px;
-    height: 50px;
+    height: 40px;
 }
 
 #top-title {
