--- a/views/favorites.handlebars
+++ b/views/favorites.handlebars
@@ -25,10 +25,11 @@
 <body onload="setPageType('Favorites', 'none');"> 
 
   <nav class="navbar navbar-expand-md navbar-dark bg-dark" id="dummyBar">
-    <a class="navbar-brand" href="/">EZ Cooking</a>
+    <a class="navbar-brand" href="/home">
+      <img class="navbar-logo"src="/images/logo-transparent.svg">
+    </a>
   </nav>
   <div id="topNavBar"></div>
-
 
   <div class="container">
 
