--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -55,10 +55,12 @@
   <body>
 
 
-    <nav class="navbar navbar-expand-md navbar-dark bg-dark" id="dummyBar">
-      <a class="navbar-brand" href="/">EZ Cooking</a>
-    </nav>
-    <div id="topNavBar"></div>
+  <nav class="navbar navbar-expand-md navbar-dark bg-dark" id="dummyBar">
+    <a class="navbar-brand" href="/home">
+      <img class="navbar-logo"src="/images/logo-transparent.svg">
+    </a>
+  </nav>
+  <div id="topNavBar"></div>
 
     <div class="container">
       <h3 id="title">Learn to cook!</h3>
