--- a/views/ingTool.handlebars
+++ b/views/ingTool.handlebars
@@ -26,7 +26,9 @@
 
 
   <nav class="navbar navbar-expand-md navbar-dark bg-dark" id="dummyBar">
-    <a class="navbar-brand" href="/">EZ Cooking</a>
+    <a class="navbar-brand" href="/home">
+      <img class="navbar-logo"src="/images/logo-transparent.svg">
+    </a>
   </nav>
   <div id="topNavBar"></div>
 
