--- a/views/instructions.handlebars
+++ b/views/instructions.handlebars
@@ -27,7 +27,9 @@
 <body onload="extractRecipe('{{name}}');">
 
   <nav class="navbar navbar-expand-md navbar-dark bg-dark" id="dummyBar">
-    <a class="navbar-brand" href="/">EZ Cooking</a>
+    <a class="navbar-brand" href="/home">
+      <img class="navbar-logo"src="/images/logo-transparent.svg">
+    </a>
   </nav>
   <div id="topNavBar"></div>
 
