--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -16,7 +16,9 @@
 <body onload="setPageType('Profile', '');">
 
   <nav class="navbar navbar-expand-md navbar-dark bg-dark" id="dummyBar">
-    <a class="navbar-brand" href="/">EZ Cooking</a>
+    <a class="navbar-brand" href="/home">
+      <img class="navbar-logo"src="/images/logo-transparent.svg">
+    </a>
   </nav>
   <div id="topNavBar"></div>
 
@@ -52,7 +54,7 @@
     </div>
 
     <div class="row" id="food-pictures">
-
+      <!-- Filled in with food pictures from FirebaseCheck.js -->
     </div>
 
   </div>
