--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -2,8 +2,6 @@
 <html>
 
 <head>
-
-
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-114830772-1"></script>
   <script>
@@ -23,25 +21,19 @@
   <link href="/css/login.css" rel="stylesheet">
 </head>
 
-<body background="/images/login/background_splash.jpg" class="bg">
+<body background="/images/login/background_splash.png" class="bg">
 
-  <div class="container fill">
+  <div class="container fill bg-half-dark text-white">
     <div class="row align-items-center justify-content-center">
 
       <div class="col-12">
-        <h2 class="text-center" id="top-title">
-          <strong></strong>
-        </h2>
+        <div class="text-center p-3 mb-2" id="top-title">
+          <img src="/images/logo-transparent.svg">
+        </div>
       </div>
 
       <div class="col-12">
-        <h1 class="text-center p-3 mb-2 bg-half-dark text-white" id="top-title">
-          <strong>EZ Cooking</strong>
-        </h1>
-      </div>
-
-      <div class="col-12">
-        <h5 class="text-center p-3 mb-2 bg-half-dark text-white" id="top-title">
+        <h5 class="text-center p-3 mb-2" id="top-title">
           The app that makes cooking easy and fun.
         </h5>
       </div>
