--- a/public/css/ez-styles.css
+++ b/public/css/ez-styles.css
@@ -63,6 +63,14 @@ body {
     transform: translate(-50%, -50%);
 }
 
+.no-padding {
+    padding: 0px;
+}
+
+.no-margin {
+    margin: 0px;
+}
+
 #whitebox {
     width: 110%;
     background-color: white;
