--- a/public/css/login.css
+++ b/public/css/login.css
@@ -38,7 +38,7 @@ html{
 }
 
 .bg-half-dark {
-    background:rgba(34, 34, 34, 0.5);
+    background:rgba(14, 14, 14, 0.5);
 }
 
 #footer {
@@ -49,4 +49,10 @@ html{
 .grayscale {
     -webkit-filter: grayscale(100%);
     filter: gray;
+}
+
+/* Overrides ez-styles */
+.container {
+    width: 100%;
+    max-width: 100%;
 }
