--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -17,7 +17,7 @@
 
   <nav class="navbar navbar-expand-md navbar-dark bg-dark" id="dummyBar">
     <a class="navbar-brand" href="/home">
-      <img class="navbar-logo"src="/images/logo-transparent.svg">
+      <img class="navbar-logo" src="/images/logo-transparent.svg">
     </a>
   </nav>
   <div id="topNavBar"></div>
@@ -55,6 +55,9 @@
 
     <div class="row" id="food-pictures">
       <!-- Filled in with food pictures from FirebaseCheck.js -->
+      <div class="col-12">
+        <p class="px-2 px-md-0" id="food-no-content"></p>
+      </div>
     </div>
 
   </div>
