--- a/views/checklist.handlebars
+++ b/views/checklist.handlebars
@@ -85,7 +85,7 @@
 
   <script src="https://code.jquery.com/jquery.js"></script>
   <script src="/js/bootstrap.min.js"></script>
-  <script src="/js/toolsIngredientsFunctions.js"></script>
+  <script src="/js/checklist.js"></script>
 
   <script src="https://www.gstatic.com/firebasejs/4.9.1/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/4.9.1/firebase-auth.js"></script>
