--- a/public/css/food.css
+++ b/public/css/food.css
@@ -1,4 +1,3 @@
-
 #favorites-star {
     position: absolute;
     max-height: 3.25rem;
@@ -16,26 +15,33 @@
 }
 
 h5 {
-	font-size: 2em;
-	text-align: center;
-} 
-#eta {
-	text-align: center;
-	font-style: italic;
+    font-size: 2em;
+    text-align: center;
 }
 
+#eta {
+    text-align: center;
+    font-style: italic;
+}
+
+.fadeToBlack {
+    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.25);
+}
 
 .row-adj {
-	margin-top: 20px;
+    margin-top: 20px;
 }
+
 .center {
-	text-align: center;
+    text-align: center;
 }
+
 .right {
-  text-align: right;
+    text-align: right;
 }
+
 .underline {
-  text-decoration: underline;
+    text-decoration: underline;
 }
 
 #picture-wrapper {
@@ -55,11 +61,10 @@ h5 {
 }
 
 #name-row {
-    padding-top : 6px;
+    padding-top: 6px;
 }
 
 #button-row {
     padding-top: 20px;
     padding-bottom: 10px;
 }
-
