--- a/public/css/home.css
+++ b/public/css/home.css
@@ -10,17 +10,6 @@
     color: black;
 }
 
-.outer-name {
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-}
-.container {
-    padding : 0px;
-    width: 100%;
-    max-width: 700px;
-}
-
 .food-card {
     padding-bottom: 20px;
 }
@@ -31,6 +20,7 @@
     height: auto;
     max-height: 25vh;
     object-fit: cover;
+    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.25);
 }
 
 .food-link{
