--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -43,84 +43,78 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
     crossorigin="anonymous">
-  <link href="/css/index.css" rel="stylesheet">
   <link href="/css/ez-styles.css" rel="stylesheet">
-
-  <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-      <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
-  <![endif]-->
+  <link href="/css/home.css" rel="stylesheet">
 </head>
 
-  <body>
-
+<body>
 
   <nav class="navbar navbar-expand-md navbar-dark bg-dark" id="dummyBar">
     <a class="navbar-brand" href="/home">
-      <img class="navbar-logo"src="/images/logo-transparent.svg">
+      <img class="navbar-logo" src="/images/logo-transparent.svg">
     </a>
   </nav>
   <div id="topNavBar"></div>
 
-    <div class="container">
-      <h3 id="title">Learn to cook!</h3>
+  <div class="container">
+    <h3 id="title">Learn to cook!</h3>
+
+    <div class="row">
+      {{#if viewAlt}}
+
+      <!-- A/B Testing Homepage -->
 
       <div class="row">
-        {{#if viewAlt}}
-
-        <!-- A/B Testing Homepage -->
-
-        <div class="row">
-          {{#each categories}}
-          <div class="col-6 col-pad">
-            <a class="food-link" href="category/{{name}}" id="{{id}}">
-              <img class="food-img" src="images/{{image}}">
-              <div class="centered">
-                <div id="whitebox">
-                  <h6 class="inner-name">{{name}}</h6>
-                </div>
-              </div>
-            </a>
-          </div>
-          {{/each}}
-        </div>
-
-        {{else}} {{#each categories}}
-        <div class="col-12">
-
+        {{#each categories}}
+        <div class="col-6 col-pad">
           <a class="food-link" href="category/{{name}}" id="{{id}}">
-            <div class="food-card">
-              <img class="food-img" src="images/{{image}}">
-              <h5 class="inner-name">{{name}}</h5>
-              <p class="inner-caption">{{caption}}</p>
+            <img class="food-img" src="images/{{image}}">
+            <div class="centered">
+              <div id="whitebox">
+                <h6 class="inner-name">{{name}}</h6>
+              </div>
             </div>
           </a>
-
         </div>
-
-        {{/each}} {{/if}}
+        {{/each}}
       </div>
 
+      {{else}} {{#each categories}}
+      <div class="col-12">
 
+        <a class="food-link" href="category/{{name}}" id="{{id}}">
+          <div class="food-card">
+            <img class="food-img" src="images/{{image}}">
+            <h5 class="inner-name">{{name}}</h5>
+            <p class="inner-caption">{{caption}}</p>
+          </div>
+        </a>
+
+      </div>
+
+      {{/each}} {{/if}}
     </div>
 
-    <script src="https://code.jquery.com/jquery.js"></script>
-    <script src="/js/bootstrap.min.js"></script>
 
-    <script src="https://www.gstatic.com/firebasejs/4.9.1/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/4.9.1/firebase-auth.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/4.9.1/firebase-database.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/4.9.1/firebase-firestore.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/4.9.1/firebase.js"></script>
-    <script src="/js/firebaseCheck.js"></script>
-    <script src="/js/indexAnalytics.js"></script>
+  </div>
+
+  <script src="https://code.jquery.com/jquery.js"></script>
+  <script src="/js/bootstrap.min.js"></script>
+
+  <script src="https://www.gstatic.com/firebasejs/4.9.1/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/4.9.1/firebase-auth.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/4.9.1/firebase-database.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/4.9.1/firebase-firestore.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/4.9.1/firebase.js"></script>
+  <script src="/js/firebaseCheck.js"></script>
+  <script src="/js/indexAnalytics.js"></script>
 
 
-  </body>
+</body>
 
-  <footer>
-    <br>
-    <p>© 2018 EZ Cooking</p>
-  </footer>
+<footer>
+  <br>
+  <p>© 2018 EZ Cooking</p>
+</footer>
 
 </html>
