--- a/views/category.handlebars
+++ b/views/category.handlebars
@@ -41,8 +41,9 @@
         <div class="food-back">
           <img class="animated fadeIn" id="top-image" src="../images/{{categoryImage}}">
           <h3 id="title-on-black">{{categoryName}}</h3>
-          <div class="fadeToBlack">
-          </div>
+          <div class="fadeToBlack"></div>
+          <a href="/home">
+          <img id="backArrow" class="" src="../images/back.svg"></a>
         </div>
       </div>
     </div>
