--- a/views/food.handlebars
+++ b/views/food.handlebars
@@ -110,8 +110,7 @@
 
     <!-- Steps -->
     <div id="stepsbox" class="px-2 px-md-0">
-      <h3>Steps
-      </h3>
+      <h3>Steps</h3>
       {{#each steplist}}
       <p>{{summary}}</p>
       {{/each}}
