--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -85,8 +85,9 @@
         <a class="food-link" href="category/{{name}}" id="{{id}}">
           <div class="food-card">
             <img class="food-img" src="images/{{image}}">
-            <h5 class="inner-name">{{name}}</h5>
-            <p class="inner-caption">{{caption}}</p>
+            <h5 class="inner-name px-2 px-md-0">{{name}}</h5>
+            <p class="inner-caption px-2 px-md-0">{{caption}}</p>
+            {{!-- <hr> --}}
           </div>
         </a>
 
@@ -94,7 +95,6 @@
 
       {{/each}} {{/if}}
     </div>
-
 
   </div>
 
