--- a/views/instructions.handlebars
+++ b/views/instructions.handlebars
@@ -34,11 +34,12 @@
   <div id="topNavBar"></div>
 
 
-  <div class="container px-2 px-md-0">
+  <div class="container">
 
-  <h3 id="title-no-lr-padding">Instructions</h3>
+  <img class="img-fluid" id="top-image">
+  <h3 id="title">Instructions</h3>
   
-    <div class="row">
+    <div class="row px-2 px-md-0">
 
       <div class="col">
         <p id="stepTitle">Proceed to the first step</p>
@@ -46,7 +47,7 @@
 
     </div>
 
-    <div class="row" id="extra-features-options">
+    <div class="row  px-2 px-md-0" id="extra-features-options">
       <div class="col">
         <p>EZ Cooking provides both text-to-speech (TTS) and voice recognition services so that you can prepare your meal without
           contacting your phone with dirty fingers.
@@ -78,7 +79,7 @@
     <!-- Remove this whitespace later, do some styling -->
     <br>
 
-    <div class="row">
+    <div class="row  px-2 px-md-0">
       <div class="col">
         <p>Text to speech:</p>
         <p id="tts-heard"></p>
