--- a/views/about.handlebars
+++ b/views/about.handlebars
@@ -36,7 +36,7 @@
     <div class="row">
 
       <div class="col">
-        <p>This is where we talk about the creators of EZ Cooking.</p>
+        <p>Kenneth Nguyen is a 4th year majoring in Cognitive Science with a specialization in Human Computer Interaction. His interest in UI/UX design results from his interest in continuing to learn more about developing prototypes and websites. His favorite food is fried chicken. </p>
         <br>
         <a href="/privacy">Privacy Policy</a>
         <br>
