--- a/views/about.handlebars
+++ b/views/about.handlebars
@@ -36,8 +36,12 @@
     <div class="row">
 
       <div class="col">
-        <p>Kenneth Nguyen is a 4th year majoring in Cognitive Science with a specialization in Human Computer Interaction. His interest in UI/UX design results from his interest in continuing to learn more about developing prototypes and websites. His favorite food is fried chicken. </p>
+        <p><strong>Kenneth Nguyen</strong> is a 4th year majoring in Cognitive Science with a specialization in Human Computer Interaction. His interest in UI/UX design results from his interest in continuing to learn more about developing prototypes and websites. His favorite food is fried chicken. </p>
         <br>
+
+        <p>
+          <strong>Pardeep Singh</strong> is a senior at the Universisty of California San Diego, majoring in Cognitive Science with a speacialaztion in Human Computer Interaction. From his interest in technology, Pardeep Singh is continously leanring and applying User Design and User Experience priniciples to create interactive websites and program. Aside from school and work, you can catch Pardeep hanging out at the beach with friends and family. 
+        </p>
         <a href="/privacy">Privacy Policy</a>
         <br>
         <a href="/terms">Terms and Conditions</a>
