--- a/views/about.handlebars
+++ b/views/about.handlebars
@@ -36,12 +36,32 @@
     <div class="row">
 
       <div class="col">
-        <p><strong>Kenneth Nguyen</strong> is a 4th year majoring in Cognitive Science with a specialization in Human Computer Interaction. His interest in UI/UX design results from his interest in continuing to learn more about developing prototypes and websites. His favorite food is fried chicken. </p>
+        <p><strong>EZ Cooking</strong> was made for an Intro to HCI class at the University of California, San Diego. The goal of this app was to make cooking easy and fun for beginners and intermediate cookers.
+        </p>
+        <br>
+
+        <p><strong>Kenneth Nguyen</strong> is a 4th year student at the University of California, San Diego majoring in Cognitive Science with a specialization in Human Computer Interaction. His interest in UI/UX design results from his interest in continuing to learn more about developing prototypes and websites. His favorite food is fried chicken. </p>
+        <p>
+          Kenneth specialized in information management.
+        </p>
         <br>
 
         <p>
-          <strong>Pardeep Singh</strong> is a senior at the Universisty of California San Diego, majoring in Cognitive Science with a speacialaztion in Human Computer Interaction. From his interest in technology, Pardeep Singh is continously leanring and applying User Design and User Experience priniciples to create interactive websites and program. Aside from school and work, you can catch Pardeep hanging out at the beach with friends and family. 
+          <strong>Pardeep Singh</strong> is a senior at the Universisty of California, San Diego, majoring in Cognitive Science with a specialization in Human Computer Interaction. From his interest in technology, Pardeep Singh is continuously leanring and applying User Design and User Experience priniciples to create interactive websites and programs. Aside from school and work, you can catch Pardeep hanging out at the beach with friends and family. 
         </p>
+        <p>
+          Pardeep specialized in our UI, UX, and establishing information architecture.
+        </p>
+        <br>
+
+        <p>
+          <strong>Christopher Cabreros</strong> is a senior at the University of California, San Diego majoring in Computer Engineering. He specializes in mostly C, C++, and C# programming, but good back-end skills led him to learn how to make very functional web apps. He loves the Raiders and can't wait for them to win the Super Bowl.
+        </p>
+        <p>
+          Christopher specialized in our back end and some UI.
+        </p>
+        <br>
+
         <a href="/privacy">Privacy Policy</a>
         <br>
         <a href="/terms">Terms and Conditions</a>
