--- a/views/about.handlebars
+++ b/views/about.handlebars
@@ -47,7 +47,7 @@
         <br>
 
         <p>
-          <strong>Pardeep Singh</strong> is a senior at the Universisty of California, San Diego, majoring in Cognitive Science with a specialization in Human Computer Interaction. From his interest in technology, Pardeep Singh is continuously leanring and applying User Design and User Experience priniciples to create interactive websites and programs. Aside from school and work, you can catch Pardeep hanging out at the beach with friends and family. 
+          <strong>Pardeep Singh</strong> is a senior at the Universisty of California, San Diego, majoring in Cognitive Science with a specialization in Human Computer Interaction. From his interest in technology, Pardeep Singh is continuously learning and applying User Design and User Experience priniciples to create interactive websites and programs. Aside from school and work, you can catch Pardeep hanging out at the beach with friends and family. 
         </p>
         <p>
           Pardeep specialized in our UI, UX, and establishing information architecture.
